[gd_scene load_steps=11 format=3 uid="uid://bki2lv8s3kkvd"]

[ext_resource type="Texture2D" uid="uid://dsynif5pd5iv" path="res://Game Assets/GodotPlatformerAssets/Sprites/Player_Idle.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://djdt4wbwhiq2o" path="res://Scripts/Gameplay/Player/player.gd" id="1_onrkg"]
[ext_resource type="PackedScene" uid="uid://dkos0tuvjuqaf" path="res://Scenes/Gameplay/Weapons/pistol.tscn" id="2_skuam"]
[ext_resource type="PackedScene" uid="uid://cnsyorrcrvea4" path="res://Scenes/Gameplay/interaction_components/interacting_component.tscn" id="3_6t5aa"]
[ext_resource type="Script" uid="uid://crcr8jtqc2pil" path="res://Scripts/Gameplay/HUD/HUD.gd" id="4_j8v31"]
[ext_resource type="Texture2D" uid="uid://dm4u3hmrwaxmu" path="res://Game Assets/guns_gameassets/PNG/shotgun.png" id="5_ymmdj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_onrkg"]
radius = 26.0
height = 82.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j8v31"]

[sub_resource type="CircleShape2D" id="CircleShape2D_onrkg"]
radius = 50.04

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_skuam"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("GunHolder:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("GunHolder:scale")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("PlayerSprite:flip_h")
properties/3/spawn = true
properties/3/replication_mode = 1

[node name="player" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_onrkg")
default_gun_scene = ExtResource("2_skuam")

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_4flbx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 14)
shape = SubResource("CapsuleShape2D_onrkg")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="HUD" type="CanvasLayer" parent="Camera2D"]
script = ExtResource("4_j8v31")

[node name="AmmoLabel" type="Label" parent="Camera2D/HUD"]
offset_left = 634.0
offset_top = 467.0
offset_right = 754.0
offset_bottom = 490.0
text = "Ammo: -- / --"
metadata/_edit_use_anchors_ = true

[node name="ReloadProgress" type="ProgressBar" parent="Camera2D/HUD"]
visible = false
modulate = Color(0, 1, 1, 1)
offset_left = 615.0
offset_top = 561.0
offset_right = 768.0
offset_bottom = 588.0
max_value = 1.0
show_percentage = false

[node name="ReloadBarLabel" type="Label" parent="Camera2D/HUD/ReloadProgress"]
visible = false
layout_mode = 0
offset_left = 24.0
offset_top = 3.0
offset_right = 130.0
offset_bottom = 26.0
text = "RELOADING..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="GunDisplay" type="Node" parent="Camera2D/HUD"]

[node name="Panel" type="Panel" parent="Camera2D/HUD/GunDisplay"]
offset_left = 608.0
offset_top = 494.0
offset_right = 779.0
offset_bottom = 560.0
theme_override_styles/panel = SubResource("StyleBoxFlat_j8v31")
metadata/_edit_use_anchors_ = true

[node name="CurrentGunIcon" type="TextureRect" parent="Camera2D/HUD/GunDisplay/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -126.5
offset_top = 5.0
offset_right = 127.112
offset_bottom = 45.0
grow_horizontal = 2
texture = ExtResource("5_ymmdj")
expand_mode = 3
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="CurrentGunLabel" type="Label" parent="Camera2D/HUD/GunDisplay/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -49.0
offset_right = 47.0
grow_horizontal = 2
grow_vertical = 0
text = "Sample Gun"
horizontal_alignment = 1
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="GunHolder" type="Node2D" parent="."]
position = Vector2(3, 21)

[node name="PickupArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2(0, 14)
shape = SubResource("CircleShape2D_onrkg")

[node name="InteractingComponent" parent="." instance=ExtResource("3_6t5aa")]
visible = false
position = Vector2(0, 12)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -44.0
offset_top = -63.0
offset_right = 54.0
offset_bottom = -36.0

[node name="PlayerName" type="Label" parent="."]
offset_left = -50.0
offset_top = -40.0
offset_right = 59.0
offset_bottom = -17.0
text = "PLAYER NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_skuam")
